# pyenv-Poetry

./: .dockerignore  .env  Dockerfile  README.md  docker-compose.yml  fastapi_app.db  makefile  my.cnf  pyproject.toml
app/: crud.py  database.py  env.py  main.py  models.py
vite-react-ts-app/: package-lock.json  package.json
vite-react-ts-app/src/: App.tsx
