[tool.poetry]
name = "pyenv-poetry"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.99.0"
sqlalchemy = "^2.0.29"
uvicorn = {version = "0.29.0", extras = ["standard"]}
mysqlclient = "^2.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
